// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform No platform provided 1`] = `
<div
  class="Platform__Wrap-sc-1cvybfr-0 eNHyOy"
>
  <span
    data-testid="real"
  />
</div>
`;

exports[`Platform scheduled !== real & cancelled 1`] = `
<div
  class="Platform__Wrap-sc-1cvybfr-0 fhgPxW"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="Platform__ChangedWrapper-sc-1cvybfr-1 fKaTIQ"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled !== real 1`] = `
<div
  class="Platform__Wrap-sc-1cvybfr-0 kPshYj"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="Platform__ChangedWrapper-sc-1cvybfr-1 fKaTIQ"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled === real & cancelled 1`] = `
<div
  class="Platform__Wrap-sc-1cvybfr-0 gjuhnH"
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;

exports[`Platform scheduled === real 1`] = `
<div
  class="Platform__Wrap-sc-1cvybfr-0 eNHyOy"
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;
